Added writeups and new functionality

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Final Project</title>
+  <title>Movies World</title>
 
   <!-- Add all stylesheets -->
   <link href="css/viewerMainStyle.css" rel="stylesheet">
@@ -163,6 +163,8 @@
                                     Zoomable sunburst: <u><a href="https://observablehq.com/@d3/zoomable-sunburst">observable</a></u> </br>
                                     Drawing axis in d3.js: <u><a href="https://www.d3-graph-gallery.com/graph/custom_axis.html">d3 graph gallery</a></u> </br>
                                     Grid lines: <u><a href="https://bl.ocks.org/d3noob/c506ac45617cf9ed39337f99f8511218">blocks</a></u> </br>
+                                    Inflation FAQ’s: <u><a href="https://www.usinflationcalculator.com/frequently-asked-questions-faqs/#HowInflationCalculatorWorks">usinflationcalculator</a></u> </br>
+                                    CPI and Inflation Rate (by year): <u><a href="https://cpiinflationcalculator.com/2010-cpi-inflation-united-states/">cpiinflationcalculator</a></u> </br>
 
                                   </h6>
                                 </div>
