--- a/ratingschart.html
+++ b/ratingschart.html
@@ -6,7 +6,7 @@
   <link href="css/d3/raitings.css" rel="stylesheet" type="text/css">
   <script src="https://d3js.org/d3.v5.min.js"></script>
 
-  <title>SF Arrests</title>
+  <title>Movies World</title>
 </head>
 
 <body>
