--- a/alphalocations.html
+++ b/alphalocations.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Final Project</title>
+  <title>Movies World</title>
 
   <!-- Add all stylesheets -->
   <link href="css/viewerMainStyle.css" rel="stylesheet">
