--- a/data.html
+++ b/data.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Final Project</title>
+  <title>Movies World</title>
 
   <!-- Add all stylesheets -->
   <link href="css/viewerMainStyle.css" rel="stylesheet">
@@ -91,7 +91,7 @@
 
                                 <h6 class="font_11" style="line-height:1.5em;">
                                   For my final project I decided to use two different datasets. Both of them include information about movies.
-                                  I decided to use the dataset "<u><a href="https://www.kaggle.com/san-francisco/sf-film-locations-in-san-francisco">SF Film Locations in San Francisco</a></u>" to build the map of locations and to use "<u><a href="https://data.world/data-society/imdb-5000-movie-dataset">IMDB 5000 Movie Dataset</a></u>" to analyse ratings and gross dependencies.
+                                  I decided to use the dataset "<u><a href="https://www.kaggle.com/san-francisco/sf-film-locations-in-san-francisco">Film Locations in San Francisco</a></u>" to build the map of locations and to use "<u><a href="https://data.world/data-society/imdb-5000-movie-dataset">IMDB 5000 Movie Dataset</a></u>" to analyse ratings and gross dependencies.
                                 </h6></br>
                               </br>
                                 <h6 class="font_12" style="line-height:1.5em;">
