--- a/locations.html
+++ b/locations.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Final Project</title>
+  <title>Movies World</title>
 
   <!-- Add all stylesheets -->
   <link href="css/viewerMainStyle.css" rel="stylesheet">
@@ -107,6 +107,7 @@
                                       <g id="outline" pointer-events="none"></g>
                                       <g id="movies"></g>
                                       <g id="tooltip" pointer-events="none"></g>
+                                      <g id="tooltipsmall" pointer-events="none"></g>
                                       <g id="details" pointer-events="none"></g>
                                     </g>
                                     <g id="legend" pointer-events="none"></g>
@@ -114,22 +115,11 @@
                                   <svg width="960" height="500" id="barchart">
                                     </svg>
                                   <figcaption>
+                                  </br>
                                     Source: <a href="https://www.kaggle.com/san-francisco/sf-film-locations-in-san-francisco">SF Film Locations in San Francisco</a> (<a
                                     href="https://data.sfgov.org/Geographic-Locations-and-Boundaries/Analysis-Neighborhoods/p5b7-5n3h">Neighborhoods</a>, <a href="https://data.sfgov.org/Geographic-Locations-and-Boundaries/Streets-Active-and-Retired/3psu-pn9h">Streets</a>) </br>
                                     Made by Elizaveta Ozerova
                                   </figcaption>
-
-                                  <div class="align-items-center">
-                                    </br>
-                                    <div width="960" class="col-sm-2">
-                                      <p id="value-simple"></p>
-                                    </div>
-                                    <div class="col-sm">
-                                      <div id="slider-simple"></div>
-                                    </div>
-                                  </div>
-
-
                                 </figure>
                                 <script>
                                   drawMap();
@@ -166,7 +156,13 @@
                     </div>
                     <div data-packed="true" style="width: 1000px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
                       <h6 class="font_6" style="line-height:1.5em;">
-                        Explain to general users how your data is encoded and how to interpret your visualization(s).
+                        The non-proportional symbol map shows San Francisco map, a basemap consists of SF neighborhoods, on top of basemap SF blocks are visualized.
+                        The circles on the map show the places where a particular movie scene took a place.
+                        The color scheme distinguishes between years. The older years are encoded in purple and blue colors while the most recent are encoded in green and yellow. </br>
+                        The bar chart represents amount of SF locations used in cinematography by years.
+                        The yAxis represents the amount of SF locations, the xAxis represents years. </br>
+                        The small bar chart represents the filtering interactivity, see "Interactivity" explanations below.
+
                       </h6>
                     </div>
 
@@ -176,8 +172,20 @@
                       </div>
                       <div data-packed="true" style="width: 1000px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
                         <h6 class="font_6" style="line-height:1.5em;">
-                          Explain to general users how to interact with your visualization(s).
+                          Hover over the circle to see detailed information. Tooltip includes title of the movie, release year, address where the
+                           scene was filmed and director's name. Hover over the neighborhood to see the it's name. </br>
+                          Use the mouse up and mouse down functionality to zoom in and zoom out. Mouse down -> zoom in. Mouse up -> zoom out.
+                           Click twice on the neighborhood to zoom into it. Panning can be accomplished clicking and dragging the box on the overview.
+                           That's the way to see the different neighborhoods details on zoomed in map without zooming out. </br>
+                          Use the small bar chart under the map to choose which range of years should be shown on the map. If you want to see a particular year,
+                           drag both left and right sliders to the same bar. </br>
+                           Hover over the bar in a big bar chart to see detailed information. Tooltip includes release year and amount of SF locations used in cinematography.</br>
+                           See example below: </br>
                         </h6>
+                        <div data-packed="true" style="width: 606px; height: 450px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
+                          </br></br>
+                          <img width=600px src="interactivity/map_final.gif" alt="Interactivity_Map">
+                        </div>
                       </div>
                     </div>
 
@@ -187,9 +195,15 @@
                       </div>
                       <div data-packed="true" style="width: 1000px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
                         <h6 class="font_6" style="line-height:1.5em;">
-                          Explain a major finding from your visualization to general users.
-                          This should help support your overall narrative or theme.
-                          You can pose this in a question/answer format like your prototype page.
+                          From this visualization we can see that the first record from our dataset was filmed in the Golden Gate Park, however the trend shows that
+                          during next 99 years downtown San Francisco was the most popular filming place. We can also notice that in the
+                          past 50 years the Mission District became quite popular for filming too. </br>
+                          We can also see that one year shows much more movies than others, that, firstly, obviously San Francisco was very popular to film in in 2015, secondly it can be explained by the dataset that includes series. And every new location/new episode exists in dataset.
+                          We can also notice that San Francisco became popular in 2013 for not just movie makers, but for series makers too.
+                         </br>
+                        </h6>
+                        <h6 class="font_6" style="line-height:1.5em;">
+                         </br>
                         </h6>
                       </div>
                     </div>
