--- a/map.html
+++ b/map.html
@@ -7,7 +7,7 @@
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://unpkg.com/d3-simple-slider"></script>
 
-  <title>SF Arrests</title>
+  <title>Movies World</title>
 </head>
 
 <body>
